# TensorLite

./: .gitignore  CMakeLists.txt  README.md  main.cu  matrix_mul.cuh
include/: TensorLite.h  matrix_mul.cuh
python/: basic.py  tensorlite.py  test_tensorlite.py
src/: DenseLayer.cu  TensorLite.cpp  TensorLite.h  TensorOps.cu  matrix_mul.cu  vector_add.cu
